--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,11 @@
     ],
     "paths": {
       "@/*": ["./*"],
+      "@app/*": ["./src/app/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@widgets/*": ["./src/widgets/*"],
+      "@features/*": ["./src/features/*"],
+      "@entities/*": ["./src/entities/*"],
       "@shared/*": ["./src/shared/*"]
     }
   },
